feat: 加入面板查询
